# weather-widget-2

./: .gitignore  CMakeLists.txt  README.md  compile.php  create-plasmoid-package.sh  dev-build.sh  incBuild.sh  updateLocationDatabases.sh
package/: metadata.desktop  metadata.json
package/contents/: hinckley.json
package/contents/code/: config-utils.js  data-loader.js  icons.js  model-utils.js  placesearch-helpers.js  unit-utils.js
package/contents/code/db/: AD.csv  AE.csv  AF.csv  AG.csv  AI.csv  AL.csv  AM.csv  AO.csv  AQ.csv  AR.csv  AS.csv  AT.csv  AU.csv  AW.csv  AX.csv  AZ.csv  BA.csv  BB.csv  BD.csv  BE.csv  BF.csv  BG.csv  BH.csv  BI.csv  BJ.csv  BL.csv  BM.csv  BN.csv  BO.csv  BQ.csv  BR.csv  BS.csv  BT.csv  BW.csv  BY.csv  BZ.csv  CA.csv  CC.csv  CD.csv  CF.csv  (+207 more)
package/contents/code/weather/: current.2644668.xml  current.5368361.xml  current.xml  daily.1609350.xml  daily.2644668.xml  daily.5368361.xml  daily.xml  forecast.1609350.xml  forecast.2644668.xml  forecast.5368361.xml  forecast.xml  sun.json  weather.json
package/contents/config/: config.qml  main.xml
package/contents/locale/bg/LC_MESSAGES/: plasma_applet_org.kde.weatherWidget-2.mo
package/contents/locale/cs/LC_MESSAGES/: plasma_applet_org.kde.weatherWidget-2.mo
package/contents/locale/de/LC_MESSAGES/: plasma_applet_org.kde.weatherWidget-2.mo
package/contents/locale/en/LC_MESSAGES/: plasma_applet_org.kde.weatherWidget-2.mo
package/contents/ui/: CompactItem.qml  CompactRepresentation.qml  CompactRepresentationInTray.qml  FullRepresentation.qml  FullRepresentationInTray.qml  Meteogram.qml  NextDayItem.qml  NextDayPeriodItem.qml  WeatherCache.qml  main.qml
package/contents/ui/config/: ConfigAppearance.qml  ConfigGeneral.qml  ConfigUnits.qml
package/contents/ui/providers/: MetNo.qml  OpenWeatherMap.qml  OpenWeatherMap2.qml  YrNo.qml
package/translations/: CMakeLists.txt  ReadMe.md  bg.po  build.sh  cs.po  de.po  en.po  es.po  fr.po  hu_HU.po  it_IT.po  lt.po  merge.sh  nb.po  nl.po  pl.po  ru.po  sv.po  template.pot  zh_CN.po  zh_TW.po
package/translations/po/: bg.po  build.sh  cs.po  de.po  en.po  es.po  fr.po  hu_HU.po  it_IT.po  lt.po  merge.sh  nl.po  pl.po  ru.po  sv.po  template.pot  zh_CN.po  zh_TW.po
plugin/: CMakeLists.txt  backend.cpp  backend.h  plasmoidplugin.cpp  plasmoidplugin.h  qmldir
translations/: CMakeLists.txt  Messages.sh  ReadMe.md  TRANSLATORS_README  merge.sh  update-translations.sh
translations/po/: CMakeLists.txt  bg.po  build.sh  ca.po  ca_ES.po  cs.po  de.po  en.po  es.po  fr.po  hu_HU.po  it_IT.po  lt.po  merge.sh  nb.po  nl.po  pl.po  plasma_applet_org.kde.weatherWidget.pot  plasma_applet_org.kde.weatherWidget_bg.po  plasma_applet_org.kde.weatherWidget_cs.po  plasma_applet_org.kde.weatherWidget_de.po  plasma_applet_org.kde.weatherWidget_en.po  plasma_applet_org.kde.weatherWidget_es.po  plasma_applet_org.kde.weatherWidget_fr.po  plasma_applet_org.kde.weatherWidget_hu_HU.po  plasma_applet_org.kde.weatherWidget_it_IT.po  plasma_applet_org.kde.weatherWidget_lt.po  plasma_applet_org.kde.weatherWidget_pl.po  plasma_applet_org.kde.weatherWidget_ru.po  plasma_applet_org.kde.weatherWidget_zh_CN.po  plasma_applet_org.kde.weatherWidget_zh_TW.po  pt_BR.po  ru.po  sv.po  template.pot  tr.po  zh_CN.po  zh_TW.po
(+11 files in other folders)
